infrastructure/kubernetes/tenants/roundcube/roundcube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
  namespace: roundcube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roundcube
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      containers:
        - name: roundcube
          image: roundcube/roundcubemail:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: roundcube-data
              mountPath: /var/www/html
            - name: roundcube-data
              mountPath: /var/roundcube/db
              subPath: db
            - name: roundcube-oauth-config
              mountPath: /var/roundcube/config/oauth.php
              subPath: oauth-config.inc.php
      volumes:
        - name: roundcube-data
          persistentVolumeClaim:
            claimName: roundcube-data
        - name: roundcube-oauth-config
          configMap:
            name: roundcube-oauth-config

---
apiVersion: v1
kind: Service
metadata:
  name: roundcube
  namespace: roundcube
spec:
  selector:
    app: roundcube
  ports:
    - name: http
      port: 80
      targetPort: 80
