infrastructure/kubernetes/tenants/roundcube/roundcube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundcube-ingress
  namespace: roundcube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Webmail"
    gethomepage.dev/description: "Roundcube"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "roundcube.png"
    gethomepage.dev/pod-selector: "app=roundcube"
spec:
  rules:
    - host: webmail.smallworlds.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: roundcube
                port:
                  name: http
  tls:
    - hosts:
        - webmail.smallworlds.network
      secretName: roundcube-tls
